k8s/moveyourbody-back-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moveyourbody-back-end-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: moveyourbody-back-end
  template:
    metadata:
      labels:
        component: moveyourbody-back-end
    spec:
      containers:
        - name: backend
          image: ghcr.io/adam-mgshgy/moveyourbody:1.0.1
          ports:
            - containerPort: 80
