k8s/moveyourbody-back-end-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moveyourbody-back-end-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: moveyourbody-back-end
