k8s/mysql-moveyourbody-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-moveyourbody-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql-moveyourbody
